# -*- makefile -*-
#
# See the LICENSE file in the top level directory for license
# information
#

include $(top_srcdir)/config/Makefile.options

EXTRA_DIST		= \
			cxx_find_template_repository.m4 \
			cxx_have_stl.m4 \
			cxx_have_broken_getline.m4 \
			distscript.csh \
			insertlic.csh \
			license.hdr \
			Makefile.options
